--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 bm25s==0.2.3
-numpy==2.1.2
+datasets==3.0.1
+huggingface_hub==0.25.2
 pandas==2.2.3
+psutil==5.9.0
 pyvi==0.1.1
+PyYAML==6.0.2
+sentence_transformers==3.2.1
+torch==2.4.1
 tqdm==4.66.5
+transformers==4.45.2
 underthesea==6.8.4
