--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 bm25s==0.2.3
-datasets==3.0.1
+datasets==2.19.0
 huggingface_hub==0.25.2
+loguru==0.7.2
+numpy==2.1.3
 pandas==2.2.3
-psutil==5.9.0
+psutil==6.1.0
 pyvi==0.1.1
 PyYAML==6.0.2
 sentence_transformers==3.2.1
 torch==2.4.1
+torch_xla==2.5.1
 tqdm==4.66.5
-transformers==4.45.2
+transformers==4.46.2
 underthesea==6.8.4
+wandb==0.18.6
